--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
     background-image: url('https://source.unsplash.com/1600x900/?landscape');
     font-size: 120%;
     transition: background-image 0.5s ease-in-out;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 2vw; 
 }
 .card {
     background: #000000d0;
@@ -99,8 +102,14 @@ input.search-bar{
     }
 
     .card {
-        padding: 1.5em;
-        max-width: none;
+        background: #000000d0;
+        color: white;
+        padding: 2em;
+        border-radius: 30px;
+        width: 150%;
+        max-width: 3vh;
+        margin: 1em;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     input.search-bar {
